--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,40 @@
-.App {
-  text-align: center;
+.main-div{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1{
+ color: white;
+ font-size: 60px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.pwd-gnr-div{
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.pwd-input{
+    font-size: 20px;
+    width: 450px;
+    height: 40px;
+    border-radius: 10px;
 }
-
-.App-link {
-  color: #61dafb;
+.copy-btn{
+    background-color: rgb(0, 255, 217);
+    height: 45px;
+    width:55px;
+    border-radius: 10px;
+    margin-left: 5px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.inp-div{
+    margin-bottom: 30px;
+}
+.fields-div{
+    display: flex;
+    flex-direction: row;
+}
+.fields-div div{
+   margin-right: 20px;
 }
